--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <div class="menu">
+    <h1>Menu</h1>
+    <ul>
+      <li id='replay'>Replay</li>
+      <li>Reset</li>
+      <li id='newGame'>New Game</li>
+      <li>New Random Game</li>
+    </ul>
+    </div>
     <div class="gameboardContainer">
     </div>
   </body>
