--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li id='replay'>Replay</li>
       <li>Reset</li>
       <li id='newGame'>New Game</li>
-      <li>New Random Game</li>
+      <li id='newRandomGame'>New Random Game</li>
     </ul>
     </div>
     <div class="gameboardContainer">
