Select gameboard size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Menu</h1>
     <ul>
       <li id='replay'>Replay</li>
-      <li>Reset</li>
+      <li id='reset'>Reset</li>
       <li id='newGame'>New Game</li>
       <li id='newRandomGame'>New Random Game</li>
     </ul>
